[gd_scene load_steps=3 format=2]

[ext_resource path="res://GeneratorButton.png" type="Texture" id=1]
[ext_resource path="res://TileItem.gd" type="Script" id=2]

[node name="TileItem" type="ColorRect" groups=[
"NonActiveOnOverlay",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -960.0
margin_bottom = -536.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="." groups=[
"NonActiveOnOverlay",
]]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 64 )
custom_constants/margin_top = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" groups=[
"NonActiveOnOverlay",
]]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 59.0
custom_constants/separation = 8

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer" groups=[
"NonActiveOnOverlay",
]]
margin_right = 64.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CenterContainer" groups=[
"NonActiveOnOverlay",
]]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 16.0
margin_right = 48.0
margin_bottom = 32.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" groups=[
"NonActiveOnOverlay",
]]
margin_top = 40.0
margin_right = 64.0
margin_bottom = 54.0
text = "Roof"
align = 1

[node name="Overlay" type="MarginContainer" parent="." groups=[
"NonActiveOnOverlay",
]]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Overlay" to="." method="_on_Overlay_gui_input"]
[connection signal="mouse_entered" from="Overlay" to="." method="_on_Overlay_mouse_entered"]
[connection signal="mouse_exited" from="Overlay" to="." method="_on_Overlay_mouse_exited"]
